column 1 and 2 start

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
   <title>Document</title>
 </head>
 <body>
+  <main class="container">
+    <div class="row">
+      <div class="col-12 bg-light">
+        <h1>Colonna 1</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ut eligendi illum facilis, sed necessitatibus incidunt delectus? Laborum totam, ipsam eaque, voluptatibus sit non iste amet quas quod nobis fuga!</p>
+      </div>
+        <div class="col-12 bg-secondary text-light">
+          <h1>Colonna 2</h1>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi natus distinctio quos. Totam fugiat fugit aliquam hic, ullam minima ratione laboriosam pariatur, voluptate fuga modi eligendi blanditiis in, recusandae id?/p>
+      </div>
+    </div>
+  </main>
   
 </body>
 </html>
