--- a/index.html
+++ b/index.html
@@ -8,16 +8,52 @@
   <title>Document</title>
 </head>
 <body>
-  <main class="container">
-    <div class="row">
-      <div class="col-12 bg-light">
-        <h1>Colonna 1</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ut eligendi illum facilis, sed necessitatibus incidunt delectus? Laborum totam, ipsam eaque, voluptatibus sit non iste amet quas quod nobis fuga!</p>
+  <header class="text-center pt-5 pb-3">
+    <h1>bootstrap 5 Responsive Grid</h1>
+    <p class="text-secondary fs-5">Layout a griglia con diversi breakpoint (sm, md, lg)</p>
+  </header>
+  <main class="container-sm">
+    <div class="row mb-4 ">
+      <div class="col-12 col-md-6 col-lg-4 bg-light py-3 px-4">
+        <h2>Colonna 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum ut eligendi illum facilis, sed necessitatibus incidunt delectus? !</p>
       </div>
-        <div class="col-12 bg-secondary text-light">
-          <h1>Colonna 2</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi natus distinctio quos. Totam fugiat fugit aliquam hic, ullam minima ratione laboriosam pariatur, voluptate fuga modi eligendi blanditiis in, recusandae id?/p>
+      <div class="col-12 col-md-6 col-lg-8 bg-secondary text-light py-3 px-4">
+          <h2>Colonna 2</h2>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi natus distinctio quos. Totam fugiat fugit aliquam hic, /p>
       </div>
+    </div>
+    <div class="row mb-4 ">
+      <div class="col-6 col-md-4 bg-primary text-white py-3 px-4">
+        <h2>Colonna 1</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ipsa lab! </p>
+      </div>
+      <div class="col-6 col-md-4 bg-success text-white py-3 px-4">
+        <h2>Colonna 2</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem  </p>
+      </div>
+      <div class="col-12 col-md-4 bg-danger text-white py-3 px-4">
+        <h2>Colonna 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem ipsa labore, ut perspiciatis temporibus adipisci! </p>
+      </div>
+    </div>
+    <div class="row mb-5 ">
+        <div class="col-6 col-md-3 bg-info text-white py-3 px-4">
+          <h2>Colonna 1</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sed qui fugiat culpa vit</p>
+        </div>
+        <div class="col-6 col-md-3 bg-warning text-white py-3 px-4">
+          <h2>Colonna 2</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sed qui fugiat culpa vit</p>
+        </div>
+        <div class="col-6 col-md-3 bg-dark text-white py-3 px-4">
+          <h2>Colonna 3</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sed qui fugiat culpa vit</p>
+        </div>
+        <div class="col-6 col-md-3 bg-light text-dark py-3 px-4">
+          <h2>Colonna 4</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sed qui fugiat culpa vit</p>
+        </div>
     </div>
   </main>
   
